started landing screen design

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" href="assets/css/components/base.css" media="all">
     <link rel="stylesheet" href="assets/css/Home/home.css" media="all">
+    <link rel="stylesheet" href="assets/css/Home/services.css" media="all">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -30,6 +31,45 @@
             MAIN SECTION
          ------------------------------------------------------>
         <main>
+            <div class="landing-screen">
+                <div class="img-container">
+                    <img src="assets/images/landing-painting.jpg">
+                    <img src="assets/images/landing-painting.jpg">
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem magnam error quis impedit sit,
+                    nulla laboriosam modi voluptate quas, magni ut, assumenda maxime quasi?
+                </p>
+                <!-- <h3>MY WEBSITE</h3> -->
+                <div class="text-container">
+                    <div class="text">
+                        <h2>WEB DEVELOPER</h2>
+                        <h2>AARON</h2>
+                        <h2>DAYRIT</h2>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+            <div class="services">
+
+            </div>
+
+            <div class="projects">
+
+            </div>
+
+            <div class="tools">
+
+            </div>
+
+            <div class="contact-me">
+
+            </div>
         </main>
 
 
