--- a/index.html
+++ b/index.html
@@ -52,12 +52,48 @@
 
 
 
+            <!-----------------------------------------------------
+               About me section and link
+            ------------------------------------------------------>
+            <div class="content1">
+                <div class="container">
+
+                    <div class="row-container row">
+
+                        <div class="col1 col-md-6 col-lg-3">
+                            <div class="col-content1 text-col">
+                                <div class="content1">
+                                    <div class="text-container">
+                                        <h2>About me</h2>
+
+                                        <p>Hi, my name is Aaron. Here, you get to know a little bit more about me. You
+                                            get to discover what I've done and my plans for my future. </p>
+
+                                        <p>There are a few other quirky and interesting facts about myself as well.</p>
+                                        <a class="lrn-btn" href="aboutme.html">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
 
+                        <div class="col1 col-md-6 col-lg-3 col-delete">
+                            <div class="col-content1 img-col">
+                                <div class="content1">
+                                    <img class="img1" src="assets/images/test1.jfif">
+                                </div>
+                            </div>
+                        </div>
 
-            <div class="services">
+                    </div>
 
+                </div>
             </div>
+
+
+            <!-- <div class="services">
+
+            </div> -->
 
             <div class="projects">
 
