updated about-me section heading content, and remove ved paragraph

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="assets/css/components/base.css" media="all">
     <link rel="stylesheet" href="assets/css/Home/home.css" media="all">
     <link rel="stylesheet" href="assets/css/Home/services.css" media="all">
+    <link rel="stylesheet" href="assets/css/Home/projects.css" media="all">
+
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -64,12 +66,14 @@
                             <div class="col-content1 text-col">
                                 <div class="content1">
                                     <div class="text-container">
-                                        <h2>About me</h2>
-
-                                        <p>Hi, my name is Aaron. Here, you get to know a little bit more about me. You
+                                        <!-- <h2>About me</h2> -->
+                                        <h2>Lorem ipsum dolor sit amet consectetur
+                                            <span>adipisicing elit. Delectus!</span>
+                                        </h2>
+                                        <!-- <p>Hi, my name is Aaron. Here, you get to know a little bit more about me. You
                                             get to discover what I've done and my plans for my future. </p>
 
-                                        <p>There are a few other quirky and interesting facts about myself as well.</p>
+                                        <p>There are a few other quirky and interesting facts about myself as well.</p> -->
                                         <a class="lrn-btn" href="aboutme.html">Learn More</a>
                                     </div>
                                 </div>
@@ -80,7 +84,7 @@
                         <div class="col1 col-md-6 col-lg-3 col-delete">
                             <div class="col-content1 img-col">
                                 <div class="content1">
-                                    <img class="img1" src="assets/images/test1.jfif">
+                                    <img class="img1" src="assets/images/landing-painting.jpg">
                                 </div>
                             </div>
                         </div>
@@ -89,11 +93,6 @@
 
                 </div>
             </div>
-
-
-            <!-- <div class="services">
-
-            </div> -->
 
             <div class="projects">
 
