--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" href="assets/css/components/base.css" media="all">
+    <link rel="stylesheet" href="assets/css/components/header.css" media="all">
+
+
     <link rel="stylesheet" href="assets/css/Home/home.css" media="all">
     <link rel="stylesheet" href="assets/css/Home/services.css" media="all">
     <link rel="stylesheet" href="assets/css/Home/projects.css" media="all">
-
-
+    <link rel="stylesheet" href="assets/css/Home/tools.css" media="all">
+    <link rel="stylesheet" href="assets/css/Home/contactme.css" media="all">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="icon" href="assets/images/icon.png">
@@ -24,9 +26,11 @@
         <!-----------------------------------------------------
             NAVIGATION AND HEADER
          ------------------------------------------------------>
-        <!-- <header>
-
-        </header> -->
+        <header>
+            <div class="container">
+                <h2><i class="fa-solid fa-bars"></i>Menu</h2>
+            </div>
+        </header>
 
 
         <!-----------------------------------------------------
