changed hero banner message

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <!-- <h3>MY WEBSITE</h3> -->
                 <div class="text-container">
                     <div class="text">
-                        <h2>WEB DEVELOPER</h2>
+                        <h2>HELLO WORLD, I'M</h2>
                         <h2>AARON</h2>
                         <h2>DAYRIT</h2>
                     </div>
