--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <main>
             <div class="landing-screen">
                 <div class="img-container">
-                    <img src="assets/images/landing-painting.jpg">
+                    <img src="assets/images/pillars.png">
                     <img src="assets/images/stairs.webp">
                 </div>
                 <p>
@@ -91,7 +91,7 @@
 
 
                         <div class="col1 col-lg-2">
-                            <div class="col-content1">
+                            <div class="col-content1 col-delete">
                                 <div class="content1">
                                     <img class="img1" src="assets/images/face3.jpg">
                                 </div>
@@ -147,7 +147,6 @@
                         <ul class="links">
                             <li>About me</li>
                             <li>Designs</li>
-                            <li>Tools</li>
                             <li>Contact me</li>
                         </ul>
 
